--- a/docker/wordpress-nginx/nginx.tmpl
+++ b/docker/wordpress-nginx/nginx.tmpl
@@ -15,6 +15,14 @@ error_log stderr;
 
 events {}
 daemon off;
+
+{{/* The default values are just too small for WordPress, see
+https://stackoverflow.com/questions/23844761/upstream-sent-too-big-header-while-reading-response-header-from-upstream */}}
+
+fastcgi_buffers 16 32k;
+fastcgi_buffer_size 64k;
+fastcgi_busy_buffers_size 64k;
+
 http {
 	include /etc/nginx/mime.types;
 
