--- a/docker/wordpress-nginx/nginx.tmpl
+++ b/docker/wordpress-nginx/nginx.tmpl
@@ -92,8 +92,33 @@ http {
 	{{ range $server := $servers }}
 	server {
 		server_name {{ buildServerName $server.Hostname }} {{range $server.Aliases }}{{ . }} {{ end }};
+
+		{{ $hasRootLocation := false }}
+
 		{{ range $location := $server.Locations }}
+			####################### START LOCATION ####################### 
 			{{ $path := buildLocation $location false }}
+
+			# ------------------------------------------------------------- #
+			{{ $ing := (getIngressInformation $location.Ingress $server.Hostname $location.IngressPath) }}
+				# Namespace      : {{ $ing.Namespace | quote}};
+				# Ingress name   : {{ $ing.Rule | quote }};
+				# Service name   : {{ $ing.Service | quote }};
+				# Service port   : {{ $ing.ServicePort | quote }};
+				# Location path  : {{ $ing.Path | escapeLiteralDollar | quote }};
+				# Ingress path   : {{ $location.IngressPath | quote }};
+			
+			# ------------------------------------------------------------- #
+
+{{/* Check if ConfigurationSnippet is empty for the root path (/).
+     The ConfigurationSnippet may contain unexpected values when the path is root.
+     Verify if the ingress is valid and uses service port 80.
+     NOTE: This unexpected behavior with root path ConfigurationSnippet is currently unexplained 
+     and will be investigated and fixed in a future update. */}}
+			{{ if and (eq $location.Path "/") (eq $ing.ServicePort "80") }}
+				{{ $hasRootLocation = true }}
+			{{ end }}
+
 			{{ if (hasPrefix $path "= ") }}
 
 {{/* Generally speaking, the controller emits two Location objects for
@@ -119,16 +144,14 @@ http {
      “near-miss” URL), nothing is exactly what we do. */}}
 
 				{{ end }}
-			{{ else if (not (empty $location.IngressPath)) }}
+			{{ else if and (not (empty $location.ConfigurationSnippet)) (eq $ing.ServicePort "80") }}
 
 {{/* This is the “main” Location object passed by the controller, and we use it to
      render the main nginx config snippet (if there is one). */}}
-
-				{{ if (not (empty $location.ConfigurationSnippet)) }}
 				location {{ $path }} {
 					{{ $location.ConfigurationSnippet }}
 				}
-				{{ end }}
+				
 			{{ else }}
 
 {{/* This is a supplemental Location that the controller emits as a
@@ -136,17 +159,20 @@ http {
      own catch-all below). */}}
 
 			{{ end }}
+			######################## END LOCATION ########################
 		{{ end }}
 		{{ $server.ServerSnippet }}
 
-		# `wordpress`-class ingress snippets end here.
+		{{ if not $hasRootLocation }}
+			# `wordpress`-class ingress snippets end here.
 
-		# Catch-all in the (unlikely) case where there is no WordPress
-	        # at the root of the domain:
-		location / {
-			# Remove OpenResty ad-ware
-			root /404;
-		}
+			# Catch-all in the (unlikely) case where there is no WordPress
+				# at the root of the domain:
+			location / {
+				# Remove OpenResty ad-ware
+				return 404;
+			}
+		{{ end }}
 	}
 	{{ end }}
 }
