--- a/docker/wordpress-nginx/nginx.tmpl
+++ b/docker/wordpress-nginx/nginx.tmpl
@@ -53,6 +53,25 @@ http {
 		end
 	}
 
+	lua_shared_dict prometheus_metrics 10M;
+	lua_package_path "/usr/local/lib/lua/prometheus.lua;;";
+
+	init_worker_by_lua_block {
+	prometheus = require("prometheus").init("prometheus_metrics")
+
+	metric_requests = prometheus:counter(
+		"nginx_http_requests_total", "Number of HTTP requests", {"host", "status"})
+	metric_latency = prometheus:histogram(
+		"nginx_http_request_duration_seconds", "HTTP request latency", {"host"})
+	metric_connections = prometheus:gauge(
+		"nginx_http_connections", "Number of HTTP connections", {"state"})
+	}
+
+	log_by_lua_block {
+	metric_requests:inc(1, {ngx.var.server_name, ngx.var.status})
+	metric_latency:observe(tonumber(ngx.var.request_time), {ngx.var.server_name})
+	}
+
 	# default server, used for NGINX healthcheck and access to nginx stats
 	server {
 		listen 127.0.0.1:{{ .StatusPort }};
@@ -201,4 +220,18 @@ stream {
 		  end
 		}
 	}
+
+	server {
+		listen 9145;
+		allow 192.168.0.0/16;
+		deny all;
+		location /metrics {
+			content_by_lua_block {
+				metric_connections:set(ngx.var.connections_reading, {"reading"})
+				metric_connections:set(ngx.var.connections_waiting, {"waiting"})
+				metric_connections:set(ngx.var.connections_writing, {"writing"})
+				prometheus:collect()
+			}
+		}
+	}	
 }
