--- a/docker/wordpress-nginx/nginx.tmpl
+++ b/docker/wordpress-nginx/nginx.tmpl
@@ -53,8 +53,9 @@ http {
 		end
 	}
 
+	# settings for nginx lua prometheus exporter
+	# from https://github.com/knyar/nginx-lua-prometheus?tab=readme-ov-file
 	lua_shared_dict prometheus_metrics 10M;
-	lua_package_path "/usr/local/lib/lua/prometheus.lua;;";
 
 	init_worker_by_lua_block {
 	prometheus = require("prometheus").init("prometheus_metrics")
@@ -68,8 +69,8 @@ http {
 	}
 
 	log_by_lua_block {
-	metric_requests:inc(1, {ngx.var.server_name, ngx.var.status})
-	metric_latency:observe(tonumber(ngx.var.request_time), {ngx.var.server_name})
+		metric_requests:inc(1, {ngx.var.server_name, ngx.var.status})
+		metric_latency:observe(tonumber(ngx.var.request_time), {ngx.var.server_name})
 	}
 
 	# default server, used for NGINX healthcheck and access to nginx stats
@@ -106,6 +107,21 @@ http {
 			}
 		}
 	}
+
+	# prometheus lua nginx metrics
+	server {
+		listen 9145;
+		allow 127.0.0.1;
+		deny all;
+		location /metrics {
+			content_by_lua_block {
+				metric_connections:set(ngx.var.connections_reading, {"reading"})
+				metric_connections:set(ngx.var.connections_waiting, {"waiting"})
+				metric_connections:set(ngx.var.connections_writing, {"writing"})
+				prometheus:collect()
+			}
+		}
+	}	
 
 	# `wordpress`-class ingress snippets start here.
 	{{ range $server := $servers }}
@@ -220,18 +236,4 @@ stream {
 		  end
 		}
 	}
-
-	server {
-		listen 9145;
-		allow 192.168.0.0/16;
-		deny all;
-		location /metrics {
-			content_by_lua_block {
-				metric_connections:set(ngx.var.connections_reading, {"reading"})
-				metric_connections:set(ngx.var.connections_waiting, {"waiting"})
-				metric_connections:set(ngx.var.connections_writing, {"writing"})
-				prometheus:collect()
-			}
-		}
-	}	
 }
