--- a/docker/wordpress-nginx/nginx.tmpl
+++ b/docker/wordpress-nginx/nginx.tmpl
@@ -132,7 +132,7 @@ http {
 		error_page 403 /global-error/403.php;
 
 		location ~ ^/global-error/.*\.php$ {
-			root /wp-errors-pages;
+			root /wp/wp-errors-pages;
 			fastcgi_pass unix:/run/php/php8.1-fpm.sock;
 		}
 
