--- a/docker/wordpress-nginx/nginx.tmpl
+++ b/docker/wordpress-nginx/nginx.tmpl
@@ -130,18 +130,18 @@ http {
 		error_page 403 500 502 503 504 /global-error/index.php;
 
 		location /global-error/ {
-            alias /wp/wp-error-pages/;
+			alias /wp/wp-error-pages/;
 
 			set $status_override $status;
 			if ($query_string ~* "status=(\d+)") {
 				set $status_override $1;
 			}
-			fastcgi_param STATUS 			 $status_override;
-            fastcgi_param SCRIPT_FILENAME    $request_filename;
-            fastcgi_param QUERY_STRING       $query_string;
-            fastcgi_param REQUEST_METHOD     $request_method;
-            fastcgi_param REQUEST_URI        $request_uri;
-            fastcgi_pass unix:/run/php-fpm/php-fpm.sock;
+			fastcgi_param status				$status_override;
+			fastcgi_param SCRIPT_FILENAME		$request_filename;
+			fastcgi_param query_string			$query_string;
+			fastcgi_param request_method		$request_method;
+			fastcgi_param request_uri			$request_uri;
+			fastcgi_pass unix:/run/php-fpm/php-fpm.sock;
 		}
 
 		{{ $hasRootLocation := false }}
