[hotfix] `/robots.txt` can't just work in the snippet
Getting

```
2025/03/11 12:03:50 [emerg] 183#183: location "/robots.txt" is outside location "/campus/art-culture/museum-exhibitions/archizoom/" in /etc/nginx/template/wordpress_fastcgi.conf:31
```

--- a/docker/wordpress-nginx/nginx.tmpl
+++ b/docker/wordpress-nginx/nginx.tmpl
@@ -150,6 +150,9 @@ http {
      and a fix will be included in a future update. */}}
 			{{ if and (eq $location.Path "/") (not (empty $ing.Service)) }}
 				{{ $hasRootLocation = true }}
+				location /robots.txt {
+					fastcgi_pass unix:/run/php-fpm/php-fpm.sock;
+				}
 			{{ end }}
 
 			{{ if (hasPrefix $path "= ") }}
