--- a/docker/wordpress-nginx/nginx.tmpl
+++ b/docker/wordpress-nginx/nginx.tmpl
@@ -17,6 +17,38 @@ events {}
 daemon off;
 
 http {
+	# settings for ngx_http_realip_module
+	# set trusted Cloudflare IP ranges (https://www.cloudflare.com/ips/)
+	set_real_ip_from 173.245.48.0/20;
+	set_real_ip_from 103.21.244.0/22;
+	set_real_ip_from 103.22.200.0/22;
+	set_real_ip_from 103.31.4.0/22;
+	set_real_ip_from 141.101.64.0/18;
+	set_real_ip_from 108.162.192.0/18;
+	set_real_ip_from 190.93.240.0/20;
+	set_real_ip_from 188.114.96.0/20;
+	set_real_ip_from 197.234.240.0/22;
+	set_real_ip_from 198.41.128.0/17;
+	set_real_ip_from 162.158.0.0/15;
+	set_real_ip_from 104.16.0.0/13;
+	set_real_ip_from 104.24.0.0/14;
+	set_real_ip_from 172.64.0.0/13;
+	set_real_ip_from 131.0.72.0/22;
+	set_real_ip_from 172.69.225.0/24;
+	set_real_ip_from 162.158.148.0/24;
+	set_real_ip_from 2400:cb00::/32;
+	set_real_ip_from 2606:4700::/32;
+	set_real_ip_from 2803:f800::/32;
+	set_real_ip_from 2405:b500::/32;
+	set_real_ip_from 2405:8100::/32;
+	set_real_ip_from 2a06:98c0::/29;
+	set_real_ip_from 2c0f:f248::/32;
+	# set trusted EPFL IP ranges
+	set_real_ip_from 10.20.0.0/16;      # prod/test
+	set_real_ip_from 128.178.211.0/24;  # prod/test
+	real_ip_header X-Forwarded-For;
+	real_ip_recursive on;
+
 	include /etc/nginx/mime.types;
 
 	client_body_temp_path /tmp/nginx/client_body;
