--- a/docker/wordpress-nginx/nginx.tmpl
+++ b/docker/wordpress-nginx/nginx.tmpl
@@ -239,6 +239,18 @@ http {
 {{/* This is the “main” Location object passed by the controller, and we use it to
      render the main nginx config snippet (if there is one). */}}
 				location {{ $path }} {
+                                        include "/etc/nginx/template/wordpress_fastcgi.conf";
+
+                                        location ~ (wp-includes|wp-admin|wp-content/(plugins|mu-plugins|themes))/ {
+                                           rewrite .*/((wp-includes|wp-admin|wp-content/(plugins|mu-plugins|themes))/.*) /$1 break;
+                                           root /wp/;
+                                           location ~* \\.(ico|pdf|apng|avif|webp|jpg|jpeg|png|gif|svg)$ {
+                                                   add_header Cache-Control "129600, public";
+                                                   # rewrite is not inherited https://stackoverflow.com/a/32126596
+                                                   rewrite .*/((wp-includes|wp-admin|wp-content/(plugins|mu-plugins|themes))/.*) /$1 break;
+                                           }
+                                        }
+
 					{{ $location.ConfigurationSnippet }}
 				}
 
