[refactor] Move as much nginx config as possible into the template

--- a/docker/wordpress-nginx/nginx.tmpl
+++ b/docker/wordpress-nginx/nginx.tmpl
@@ -236,9 +236,24 @@ http {
 				{{ end }}
 			{{ else if and (not (empty $location.ConfigurationSnippet)) (not (empty $ing.Service)) }}
 
-{{/* This is the “main” Location object passed by the controller, and we use it to
-     render the main nginx config snippet (if there is one). */}}
+{{/* Render the nginx config for is the “main” Location object passed by the controller. */}}
 				location {{ $path }} {
+					include "/etc/nginx/template/wordpress_fastcgi.conf";
+
+					location = {{ $path }}wp-admin {
+						return 301 https://{{ buildServerName $server.Hostname }}{{ $path }}wp-admin/;
+					}
+
+					location ~ (wp-includes|wp-admin|wp-content/(plugins|mu-plugins|themes))/ {
+						rewrite .*/((wp-includes|wp-admin|wp-content/(plugins|mu-plugins|themes))/.*) /$1 break;
+						root /wp/;
+						location ~* \\.(ico|pdf|apng|avif|webp|jpg|jpeg|png|gif|svg)$ {
+							add_header Cache-Control "129600, public";
+							# rewrite is not inherited https://stackoverflow.com/a/32126596
+							rewrite .*/((wp-includes|wp-admin|wp-content/(plugins|mu-plugins|themes))/.*) /$1 break;
+						}
+					}
+
 					{{ $location.ConfigurationSnippet }}
 				}
 
