[fix] “duplicate location” nginx errors w/“old” `Ingress` snippets
nginx doesn't dig having more than one `location = foo`. It doesn't
mind about duplicate regexes, on the other hand.

We will be able to revert this as soon as all of our `Ingress`es lose their fluff.

--- a/docker/wordpress-nginx/nginx.tmpl
+++ b/docker/wordpress-nginx/nginx.tmpl
@@ -240,9 +240,11 @@ http {
 				location {{ $path }} {
 					include "/etc/nginx/template/wordpress_fastcgi.conf";
 
+					{{ if (not (contains $location.ConfigurationSnippet "/wp-admin {")) }}
 					location = {{ $path }}wp-admin {
 						return 301 https://{{ buildServerName $server.Hostname }}{{ $path }}wp-admin/;
 					}
+					{{ end }}
 
 					location ~ (wp-includes|wp-admin|wp-content/(plugins|mu-plugins|themes))/ {
 						rewrite .*/((wp-includes|wp-admin|wp-content/(plugins|mu-plugins|themes))/.*) /$1 break;
