[refactor] `WP_ABSPATH` into the template
This is a follow-up to https://github.com/epfl-si/wp-ops/pull/683 that
allows up to drop the symlink altogether (https://github.com/epfl-si/wp-ops/pull/705)

--- a/docker/wordpress-nginx/nginx.tmpl
+++ b/docker/wordpress-nginx/nginx.tmpl
@@ -269,6 +269,7 @@ http {
 					}
 
 					{{ $location.ConfigurationSnippet }}
+                                        fastcgi_param WP_ABSPATH         /wp/;
 				}
 
 			{{ else }}
