--- a/docker/wordpress-nginx/nginx.tmpl
+++ b/docker/wordpress-nginx/nginx.tmpl
@@ -240,6 +240,18 @@ http {
 				location {{ $path }} {
 					include "/etc/nginx/template/wordpress_fastcgi.conf";
 
+					{{/* TODO: this “if” clause is temporary, and can be removed (i.e.
+					     we will always want the snippet inside) once all Ingresses
+					     have been converted to the “slim” format, as per
+					     https://github.com/epfl-si/wp-operator/pull/59 et al.
+
+					     Note how everything else here is carefully crafted to clash “the
+					     right way” with the “long-form” Ingresses, so that everything just
+					     works (if a tad slower) during the migration period. nginx
+					     configuration snippets that are honored on a first-one-wins basis,
+					     such as regex-based locations, come before the ConfigurationSnippet;
+					     whereas last-one-wins statements, such as `fastcgi_param`, come after
+					     it. */}}
 					{{ if (not (contains $location.ConfigurationSnippet "/wp-admin {")) }}
 					location = {{ $path }}wp-admin {
 						return 301 https://{{ buildServerName $server.Hostname }}{{ $path }}wp-admin/;
