[refactor] the `wp-content/uploads` block out of the Ingress snippet
Now the Ingress only contains things that do change from one site to
the next, e.g.

```
      fastcgi_param WP_DEBUG           true;
      fastcgi_param WP_ROOT_URI        /demo/;
      fastcgi_param WP_SITE_NAME       wpn-test-demo;
      fastcgi_param WP_DB_HOST         mariadb-02;
      fastcgi_param WP_DB_NAME         wp-db-wpn-test-demo;
      fastcgi_param WP_DB_USER         wp-db-user-wpn-test-demo;
      fastcgi_param WP_DB_PASSWORD     REDACTEDREDACTEDREDACTEDREDACTED;
```

--- a/docker/wordpress-nginx/nginx.tmpl
+++ b/docker/wordpress-nginx/nginx.tmpl
@@ -240,6 +240,16 @@ http {
 				location {{ $path }} {
 					include "/etc/nginx/template/wordpress_fastcgi.conf";
 
+					location ~ (wp-content/uploads)/ {
+						{{ if (contains $location.ConfigurationSnippet "fastcgi_param DOWNLOADS_PROTECTION_SCRIPT") }}
+						fastcgi_pass unix:/run/php-fpm/php-fpm.sock;
+						{{ else }}
+						rewrite .*/(wp-content/uploads/(.*)) /$2 break;
+						root /wp-data/wpn-test-demo/uploads/;
+						add_header Cache-Control "129600, public";
+						{{ end }}
+					}
+
 					{{/* TODO: this “if” clause is temporary, and can be removed (i.e.
 					     we will always want the snippet inside) once all Ingresses
 					     have been converted to the “slim” format, as per
