[feature] Serve YAML (S)BOM at the root of each site
- Rename with `.yaml` extension
- Move out of `wp-admin`
- Whitelist that one filename as a servable URL for nginx

--- a/docker/wordpress-nginx/nginx.tmpl
+++ b/docker/wordpress-nginx/nginx.tmpl
@@ -273,13 +273,14 @@ http {
 					}
 					{{ end }}
 
-					location ~ (wp-includes|wp-admin|wp-content/(plugins|mu-plugins|themes))/ {
-						rewrite .*/((wp-includes|wp-admin|wp-content/(plugins|mu-plugins|themes))/.*) /$1 break;
+                                        {{ $plain_file_whitelist_re := "(wp-bom[.]yaml|(wp-includes|wp-admin|wp-content/(plugins|mu-plugins|themes))/)" }}
+					location ~ {{ $plain_file_whitelist_re }} {
+						rewrite .*/({{ $plain_file_whitelist_re }}.*) /$1 break;
 						root /wp/;
 						location ~* \\.(ico|pdf|apng|avif|webp|jpg|jpeg|png|gif|svg)$ {
 							add_header Cache-Control "129600, public";
 							# rewrite is not inherited https://stackoverflow.com/a/32126596
-							rewrite .*/((wp-includes|wp-admin|wp-content/(plugins|mu-plugins|themes))/.*) /$1 break;
+							rewrite .*/({{ $plain_file_whitelist_re }}.*) /$1 break;
 						}
 					}
 
